<resources>
    <string name="app_name">AppPatitasIdatLc</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="valmascotafragment">Mascotas Perdidas</string>
    <string name="valvoluntariofragment">Voluntario</string>
    <string name="valetusuario">Usuario</string>
    <string name="valetpassword">Password</string>
    <string name="valcbguardar">¿Recordar Usuario?</string>
    <string name="valbtnlogin">INGRESAR</string>
    <string name="valbtnregistro">REGISTRATE</string>
    <string name="valetnombre">Nombres</string>
    <string name="valetapellido">Apellidos</string>
    <string name="valetemail">Email</string>
    <string name="valetcelular">Celular</string>
    <string name="vapbtnguardarregistro">REGISTRAR</string>
    <string name="valbtnregresarlogin">Regresar a Login</string>
    <string name="tituloregistro">REGISTRATE CON NOSOTROS</string>
    <string name="valtitulovoluntario">¡UNETE A NOSOTROS!</string>
    <string name="valterminoscondiciones">Lorem Ipsum es simplemente un texto de relleno de la industria de la impresión y la tipografía. Lorem Ipsum ha sido el texto de relleno estándar de la industria desde el siglo XVI, cuando un impresor desconocido tomó una galería de tipos y los mezcló para hacer un libro de muestras tipográficas. Ha sobrevivido no sólo a cinco siglos, sino también al salto hacia la composición tipográfica electrónica, permaneciendo esencialmente sin cambios. Se popularizó en la década de 1960 con el lanzamiento de hojas de Letraset que contenían pasajes de Lorem Ipsum y, más recientemente, con software de autoedición como Aldus PageMaker, que incluía versiones de Lorem Ipsum.</string>
    <string name="valcbaceptarterminos">Acepto términos y condiciones.</string>
    <string name="valbtnregistrarvoluntario">REGISTRARME</string>
    <string name="action_salir">SALIR</string>
</resources>